@@ -21,7 +21,6 @@ package org.apache.pinot.broker.routing.instanceselector;
 import com.google.common.annotations.VisibleForTesting;
 import java.time.Clock;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -39,7 +38,6 @@ import org.apache.helix.store.zk.ZkHelixPropertyStore;
 import org.apache.helix.zookeeper.datamodel.ZNRecord;
 import org.apache.pinot.broker.routing.adaptiveserverselector.AdaptiveServerSelector;
 import org.apache.pinot.broker.routing.adaptiveserverselector.PriorityPoolInstanceSelector;
-import org.apache.pinot.broker.routing.segmentpreselector.SegmentPreSelector;
 import org.apache.pinot.common.metadata.ZKMetadataProvider;
 import org.apache.pinot.common.metadata.segment.SegmentZKMetadata;
 import org.apache.pinot.common.metrics.BrokerMeter;
@@ -47,8 +45,8 @@ import org.apache.pinot.common.metrics.BrokerMetrics;
 import org.apache.pinot.common.request.BrokerRequest;
 import org.apache.pinot.common.utils.HashUtil;
 import org.apache.pinot.common.utils.SegmentUtils;
-import org.apache.pinot.common.utils.config.QueryOptionsUtils;
 import org.apache.pinot.core.transport.ServerInstance;
+import org.apache.pinot.spi.config.table.TableConfig;
 import org.apache.pinot.spi.utils.CommonConstants.Helix.StateModel.SegmentStateModel;
 import org.apache.pinot.spi.utils.builder.TableNameBuilder;
 import org.slf4j.Logger;
@@ -57,89 +55,105 @@ import org.slf4j.LoggerFactory;
 import static org.apache.pinot.spi.utils.CommonConstants.Broker.FALLBACK_POOL_ID;
 
 
-/**
- * Base implementation of instance selector. Selector maintains a map from segment to enabled ONLINE/CONSUMING server
- * instances that serves the segment and a set of unavailable segments (no enabled instance or all enabled instances are
- * in OFFLINE/ERROR state).
- * <p>
- * Special handling of new segment: It is common for new segment to be partially available or not available at all in
- * all instances.
- * 1) We don't report new segment as unavailable segments.
- * 2) To avoid creating hotspot instances, unavailable instances for new segment won't be excluded for instance
- * selection. When it is selected, we don't serve the new segment.
- * <p>
- * Definition of new segment:
- * 1) Segment created more than 5 minutes ago.
- * - If we first see a segment via initialization, we look up segment creation time from zookeeper.
- * - If we first see a segment via onAssignmentChange initialization, we use the calling time of onAssignmentChange
- * as approximation.
- * 2) We retire new segment as old when:
- * - The creation time is more than 5 minutes ago
- * - Any instance for new segment is in ERROR state
- * - External view for segment converges with ideal state
- *
- * Note that this implementation means:
- * 1) Inconsistent selection of new segments across queries (some queries will serve new segments and others won't).
- * 2) When there is no state update from helix, new segments won't be retired because of the time passing (those with
- * creation time more than 5 minutes ago).
- * TODO: refresh new/old segment state where there is no update from helix for long time.
- */
-abstract class BaseInstanceSelector implements InstanceSelector {
+/// Base implementation of instance selector. Selector maintains a map from segment to enabled ONLINE/CONSUMING server
+/// instances that serves the segment and a set of unavailable segments (no enabled instance or all enabled instances
+/// are in OFFLINE/ERROR state).
+///
+/// Special handling of new segment: It is common for new segment to be partially available or not available at all in
+/// all instances.
+/// 1) We don't report new segment as unavailable segments.
+/// 2) To avoid creating hotspot instances, unavailable instances for new segment won't be excluded for instance
+/// selection. When it is selected, we don't serve the new segment.
+///
+/// Definition of new segment:
+/// 1) Segment created more than 5 minutes ago.
+/// - If we first see a segment via initialization, we look up segment creation time from zookeeper.
+/// - If we first see a segment via onAssignmentChange initialization, we use the calling time of onAssignmentChange
+/// as approximation.
+/// 2) We retire new segment as old when:
+/// - The creation time is more than 5 minutes ago
+/// - Any instance for new segment is in ERROR state
+/// - External view for segment converges with ideal state
+///
+/// Note that this implementation means:
+/// 1) Inconsistent selection of new segments across queries (some queries will serve new segments and others won't).
+/// 2) When there is no state update from helix, new segments won't be retired because of the time passing (those with
+/// creation time more than 5 minutes ago).
+/// TODO: refresh new/old segment state where there is no update from helix for long time.
+///
+/// Alongside the selection state, this class maintains a [TableReplicaHealth] describing how well the
+/// table's segments are replicated across the instances it can route to, exposed through
+/// [#getReplicaHealth()]. Because it is derived from what routing can actually use, it accounts for both
+/// external view divergence and disabled instances, and for the replica groups that
+/// [ReplicaGroupInstanceSelector] takes out of service wholesale. Measuring it here and reporting it in
+/// [org.apache.pinot.broker.routing.manager.BaseBrokerRoutingManager] is deliberate: a selector cannot
+/// tell whether it covers the whole table or a sampled subset of it, and only the routing manager knows
+/// which one owns the table's gauges.
+public abstract class BaseInstanceSelector implements InstanceSelector {
   private static final Logger LOGGER = LoggerFactory.getLogger(BaseInstanceSelector.class);
   // To prevent int overflow, reset the request id once it reaches this value
-  private static final long MAX_REQUEST_ID = 1_000_000_000;
+  protected static final long MAX_REQUEST_ID = 1_000_000_000;
 
-  final String _tableNameWithType;
-  final ZkHelixPropertyStore<ZNRecord> _propertyStore;
-  final BrokerMetrics _brokerMetrics;
-  final AdaptiveServerSelector _adaptiveServerSelector;
+  protected TableConfig _tableConfig;
+  protected String _tableNameWithType;
+  protected ZkHelixPropertyStore<ZNRecord> _propertyStore;
+  protected BrokerMetrics _brokerMetrics;
+  protected AdaptiveServerSelector _adaptiveServerSelector;
   // Will be null if and only if adaptiveServerSelector is null
-  final PriorityPoolInstanceSelector _priorityPoolInstanceSelector;
-  final Clock _clock;
-  final boolean _useFixedReplica;
-  final long _newSegmentExpirationTimeInSeconds;
-  final boolean _emitSinglePoolSegmentsMetric;
-  final int _tableNameHashForFixedReplicaRouting;
+  protected PriorityPoolInstanceSelector _priorityPoolInstanceSelector;
+  protected Clock _clock;
+  protected InstanceSelectorConfig _config;
+  protected long _newSegmentExpirationTimeInSeconds;
+  protected boolean _emitSinglePoolSegmentsMetric;
+  protected int _tableNameHashForFixedReplicaRouting;
 
   // These 3 variables are the cached states to help accelerate the change processing
-  Set<String> _enabledInstances;
+  protected Set<String> _enabledInstances;
   // For old segments, all candidates are online
   // Reduce this map to reduce garbage
-  final Map<String, List<SegmentInstanceCandidate>> _oldSegmentCandidatesMap = new HashMap<>();
-  Map<String, NewSegmentState> _newSegmentStateMap;
+  protected final Map<String, List<SegmentInstanceCandidate>> _oldSegmentCandidatesMap = new HashMap<>();
+  protected Map<String, NewSegmentState> _newSegmentStateMap;
+  /// Number of ONLINE/CONSUMING instances in the ideal state, for old segments that have fewer
+  /// candidates than that. Only used for metrics
+  ///
+  /// Kept sparse deliberately: an absent entry means "as many candidates as the ideal state assigns",
+  /// so a healthy table stores nothing here. Read it through [#getExpectedReplicas].
+  protected final Map<String, Integer> _oldSegmentExpectedReplicasMap = new HashMap<>();
 
   // _segmentStates is needed for instance selection (multi-threaded), so it is made volatile.
-  private volatile SegmentStates _segmentStates;
-  private Map<String, ServerInstance> _enabledServerStore;
+  protected volatile SegmentStates _segmentStates;
+  // Published together with _segmentStates and read back by the routing manager to report the table's
+  // gauges. Volatile so that a reader on another thread cannot see it lagging the segment states it was
+  // computed alongside.
+  protected volatile TableReplicaHealth _replicaHealth;
+  protected Map<String, ServerInstance> _enabledServerStore;
 
-  BaseInstanceSelector(String tableNameWithType, ZkHelixPropertyStore<ZNRecord> propertyStore,
+  @Override
+  public void init(TableConfig tableConfig, ZkHelixPropertyStore<ZNRecord> propertyStore,
       BrokerMetrics brokerMetrics, @Nullable AdaptiveServerSelector adaptiveServerSelector, Clock clock,
-      InstanceSelectorConfig config) {
-    _tableNameWithType = tableNameWithType;
+      InstanceSelectorConfig config, Set<String> enabledInstances, Map<String, ServerInstance> enabledServerMap,
+      IdealState idealState, ExternalView externalView, Set<String> onlineSegments) {
+    _tableConfig = tableConfig;
+    _tableNameWithType = tableConfig.getTableName();
     _propertyStore = propertyStore;
     _brokerMetrics = brokerMetrics;
     _adaptiveServerSelector = adaptiveServerSelector;
     _clock = clock;
-    _useFixedReplica = config.isUseFixedReplica();
+    _config = config;
     _newSegmentExpirationTimeInSeconds = config.getNewSegmentExpirationTimeInSeconds();
     _emitSinglePoolSegmentsMetric = config.shouldEmitSinglePoolSegmentsMetrics();
     // Using raw table name to ensure queries spanning across REALTIME and OFFLINE tables are routed to the same
     // instance
     // Math.abs(Integer.MIN_VALUE) = Integer.MIN_VALUE, so we use & 0x7FFFFFFF to get a positive value
     _tableNameHashForFixedReplicaRouting =
-        TableNameBuilder.extractRawTableName(tableNameWithType).hashCode() & 0x7FFFFFFF;
+        TableNameBuilder.extractRawTableName(_tableNameWithType).hashCode() & 0x7FFFFFFF;
 
     _priorityPoolInstanceSelector =
         _adaptiveServerSelector == null ? null : new PriorityPoolInstanceSelector(_adaptiveServerSelector);
-    if (_adaptiveServerSelector != null && _useFixedReplica) {
+    if (_adaptiveServerSelector != null && config.isUseFixedReplica()) {
       throw new IllegalArgumentException(
           "AdaptiveServerSelector and consistent routing cannot be enabled at the same time");
     }
-  }
-
-  @Override
-  public void init(Set<String> enabledInstances, Map<String, ServerInstance> enabledServerMap, IdealState idealState,
-      ExternalView externalView, Set<String> onlineSegments) {
     _enabledInstances = enabledInstances;
     _enabledServerStore = enabledServerMap;
     Map<String, Long> newSegmentCreationTimeMap =
@@ -148,16 +162,49 @@ abstract class BaseInstanceSelector implements InstanceSelector {
     refreshSegmentStates();
   }
 
-  /**
-   * Returns whether the instance state is online for routing purpose (ONLINE/CONSUMING).
-   */
+  /// Returns how well the table's segments are currently replicated across the instances this selector
+  /// can route to. Never null once [#init] has run.
+  @Override
+  public TableReplicaHealth getReplicaHealth() {
+    return _replicaHealth;
+  }
+
+  /// Returns the number of instances the ideal state assigns to the given old segment in an
+  /// ONLINE/CONSUMING state. See [#_oldSegmentExpectedReplicasMap] for why this is stored sparsely.
+  private int getExpectedReplicas(String segment, int numCandidates) {
+    return Math.max(1, _oldSegmentExpectedReplicasMap.getOrDefault(segment, numCandidates));
+  }
+
+  /// Records an old segment's candidates, along with the ideal-state replica count the replica health needs
+  /// that the candidate list does not preserve. The single entry point for both structures, so that they
+  /// cannot fall out of step.
+  protected void putOldSegment(String segment, List<SegmentInstanceCandidate> candidates,
+      Map<String, String> idealStateInstanceStateMap) {
+    _oldSegmentCandidatesMap.put(segment, candidates);
+    // Stored only when it differs from the candidate count, see _oldSegmentExpectedReplicasMap
+    int numIdealStateReplicas = getNumInstancesOnlineForRouting(idealStateInstanceStateMap);
+    if (numIdealStateReplicas > candidates.size()) {
+      _oldSegmentExpectedReplicasMap.put(segment, numIdealStateReplicas);
+    }
+  }
+
+  /// Returns the number of instances in the given ideal state assignment that are ONLINE/CONSUMING.
+  protected static int getNumInstancesOnlineForRouting(Map<String, String> idealStateInstanceStateMap) {
+    int numOnlineForRouting = 0;
+    for (String state : idealStateInstanceStateMap.values()) {
+      if (isOnlineForRouting(state)) {
+        numOnlineForRouting++;
+      }
+    }
+    return numOnlineForRouting;
+  }
+
+  /// Returns whether the instance state is online for routing purpose (ONLINE/CONSUMING).
   static boolean isOnlineForRouting(@Nullable String state) {
     return SegmentStateModel.ONLINE.equals(state) || SegmentStateModel.CONSUMING.equals(state);
   }
 
-  /**
-   * Returns a map from new segment to their creation time based on the ZK metadata.
-   */
+  /// Returns a map from new segment to their creation time based on the ZK metadata.
   Map<String, Long> getNewSegmentCreationTimeMapFromZK(IdealState idealState, ExternalView externalView,
       Set<String> onlineSegments) {
     List<String> potentialNewSegments = new ArrayList<>();
@@ -194,12 +241,10 @@ abstract class BaseInstanceSelector implements InstanceSelector {
     return newSegmentCreationTimeMap;
   }
 
-  /**
-   * Returns whether a segment is qualified as a new segment.
-   * A segment is count as old when:
-   * - Any instance for the segment is in ERROR state
-   * - External view for the segment converges with ideal state
-   */
+  /// Returns whether a segment is qualified as a new segment.
+  /// A segment is count as old when:
+  /// - Any instance for the segment is in ERROR state
+  /// - External view for the segment converges with ideal state
   static boolean isPotentialNewSegment(Map<String, String> idealStateInstanceStateMap,
       @Nullable Map<String, String> externalViewInstanceStateMap) {
     if (externalViewInstanceStateMap == null) {
@@ -220,9 +265,7 @@ abstract class BaseInstanceSelector implements InstanceSelector {
     return !hasConverged;
   }
 
-  /**
-   * Returns the online instances for routing purpose.
-   */
+  /// Returns the online instances for routing purpose.
   static TreeSet<String> getOnlineInstances(Map<String, String> idealStateInstanceStateMap,
       Map<String, String> externalViewInstanceStateMap) {
     TreeSet<String> onlineInstances = new TreeSet<>();
@@ -237,9 +280,7 @@ abstract class BaseInstanceSelector implements InstanceSelector {
     return onlineInstances;
   }
 
-  /**
-   * Converts the given map into a sorted map if needed.
-   */
+  /// Converts the given map into a sorted map if needed.
   static SortedMap<String, String> convertToSortedMap(Map<String, String> map) {
     if (map instanceof SortedMap) {
       return (SortedMap<String, String>) map;
@@ -248,61 +289,72 @@ abstract class BaseInstanceSelector implements InstanceSelector {
     }
   }
 
-  /**
-   * Updates the segment maps based on the given ideal state, external view, online segments (segments with
-   * ONLINE/CONSUMING instances in the ideal state and pre-selected by the {@link SegmentPreSelector}) and new segments.
-   * After this update:
-   * - Old segments' online instances should be tracked in _oldSegmentCandidatesMap
-   * - New segments' state (creation time and candidate instances) should be tracked in _newSegmentStateMap
-   */
+  /// Updates the segment maps based on the given ideal state, external view, online segments (segments with
+  /// ONLINE/CONSUMING instances in the ideal state and pre-selected by the `SegmentPreSelector`) and new
+  /// segments. After this update:
+  /// - Old segments' online instances should be tracked in _oldSegmentCandidatesMap
+  /// - New segments' state (creation time and candidate instances) should be tracked in _newSegmentStateMap
   void updateSegmentMaps(IdealState idealState, ExternalView externalView, Set<String> onlineSegments,
       Map<String, Long> newSegmentCreationTimeMap) {
     _oldSegmentCandidatesMap.clear();
+    _oldSegmentExpectedReplicasMap.clear();
     _newSegmentStateMap = new HashMap<>(HashUtil.getHashMapCapacity(newSegmentCreationTimeMap.size()));
 
     Map<String, Map<String, String>> idealStateAssignment = idealState.getRecord().getMapFields();
     Map<String, Map<String, String>> externalViewAssignment = externalView.getRecord().getMapFields();
-    int count = 0;
+    int numSinglePoolSegments = 0;
     Set<Integer> pools = new HashSet<>();
     for (String segment : onlineSegments) {
       Map<String, String> idealStateInstanceStateMap = idealStateAssignment.get(segment);
+      // TODO: Verify whether sorting is actually needed
+      Map<String, String> sortedIdealStateMap = convertToSortedMap(idealStateInstanceStateMap);
       Long newSegmentCreationTimeMs = newSegmentCreationTimeMap.get(segment);
       Map<String, String> externalViewInstanceStateMap = externalViewAssignment.get(segment);
+
       if (externalViewInstanceStateMap == null) {
         if (newSegmentCreationTimeMs != null) {
           // New segment
           List<SegmentInstanceCandidate> candidates = new ArrayList<>(idealStateInstanceStateMap.size());
-          for (Map.Entry<String, String> entry : convertToSortedMap(idealStateInstanceStateMap).entrySet()) {
+          int idealStateReplicaId = 0;
+          for (Map.Entry<String, String> entry : sortedIdealStateMap.entrySet()) {
             if (isOnlineForRouting(entry.getValue())) {
               String instance = entry.getKey();
-              candidates.add(new SegmentInstanceCandidate(instance, false, getPool(instance)));
+              candidates.add(new SegmentInstanceCandidate(instance, false, getPool(instance), idealStateReplicaId));
             }
+            idealStateReplicaId++;
           }
           _newSegmentStateMap.put(segment, new NewSegmentState(newSegmentCreationTimeMs, candidates));
         } else {
           // Old segment
-          _oldSegmentCandidatesMap.put(segment, Collections.emptyList());
+          putOldSegment(segment, List.of(), idealStateInstanceStateMap);
         }
       } else {
         TreeSet<String> onlineInstances = getOnlineInstances(idealStateInstanceStateMap, externalViewInstanceStateMap);
         if (newSegmentCreationTimeMs != null) {
           // New segment
           List<SegmentInstanceCandidate> candidates = new ArrayList<>(idealStateInstanceStateMap.size());
-          for (Map.Entry<String, String> entry : convertToSortedMap(idealStateInstanceStateMap).entrySet()) {
+          int idealStateReplicaId = 0;
+          for (Map.Entry<String, String> entry : sortedIdealStateMap.entrySet()) {
             if (isOnlineForRouting(entry.getValue())) {
               String instance = entry.getKey();
               candidates.add(
-                  new SegmentInstanceCandidate(instance, onlineInstances.contains(instance), getPool(instance)));
+                  new SegmentInstanceCandidate(instance, onlineInstances.contains(instance), getPool(instance),
+                      idealStateReplicaId));
             }
+            idealStateReplicaId++;
           }
           _newSegmentStateMap.put(segment, new NewSegmentState(newSegmentCreationTimeMs, candidates));
         } else {
           // Old segment
           List<SegmentInstanceCandidate> candidates = new ArrayList<>(onlineInstances.size());
-          for (String instance : onlineInstances) {
-            candidates.add(new SegmentInstanceCandidate(instance, true, getPool(instance)));
+          int idealStateReplicaId = 0;
+          for (String instance : sortedIdealStateMap.keySet()) {
+            if (onlineInstances.contains(instance)) {
+              candidates.add(new SegmentInstanceCandidate(instance, true, getPool(instance), idealStateReplicaId));
+            }
+            idealStateReplicaId++;
           }
-          _oldSegmentCandidatesMap.put(segment, candidates);
+          putOldSegment(segment, candidates, idealStateInstanceStateMap);
         }
       }
       if (_emitSinglePoolSegmentsMetric) {
@@ -311,12 +363,12 @@ abstract class BaseInstanceSelector implements InstanceSelector {
           pools.add(getPool(instance));
         }
         if (pools.size() < 2) {
-          count++;
+          numSinglePoolSegments++;
         }
       }
     }
     if (_emitSinglePoolSegmentsMetric) {
-      _brokerMetrics.addMeteredTableValue(_tableNameWithType, BrokerMeter.SINGLE_POOL_SEGMENTS, count);
+      _brokerMetrics.addMeteredTableValue(_tableNameWithType, BrokerMeter.SINGLE_POOL_SEGMENTS, numSinglePoolSegments);
     }
     if (LOGGER.isDebugEnabled()) {
       LOGGER.debug("Got _newSegmentStateMap: {}, _oldSegmentCandidatesMap: {}", _newSegmentStateMap.keySet(),
@@ -324,21 +376,34 @@ abstract class BaseInstanceSelector implements InstanceSelector {
     }
   }
 
-  /**
-   * Refreshes the _segmentStates based on the in-memory states.
-   * Note that the whole _segmentStates has to be updated together to avoid partial state update.
-   **/
+  /// Refreshes the \_segmentStates based on the in-memory states.
+  /// Note that the whole \_segmentStates has to be updated together to avoid partial state update.
   void refreshSegmentStates() {
     Map<String, List<SegmentInstanceCandidate>> instanceCandidatesMap =
         new HashMap<>(HashUtil.getHashMapCapacity(_oldSegmentCandidatesMap.size() + _newSegmentStateMap.size()));
     Set<String> servingInstances = new HashSet<>();
     Set<String> unavailableSegments = new HashSet<>();
+    int minPercentOfReplicas = TableReplicaHealth.FULLY_REPLICATED_PERCENT;
+    // Segments seen at exactly minPercentOfReplicas so far. Reset whenever a lower percentage displaces the
+    // minimum, so that the pair published below always describes the same population.
+    int numSegmentsAtMinPercentOfReplicas = 0;
 
     for (Map.Entry<String, List<SegmentInstanceCandidate>> entry : _oldSegmentCandidatesMap.entrySet()) {
       String segment = entry.getKey();
       List<SegmentInstanceCandidate> candidates = entry.getValue();
       List<SegmentInstanceCandidate> enabledCandidates =
           getEnabledCandidatesAndAddToServingInstances(candidates, servingInstances);
+      int expectedReplicas = getExpectedReplicas(segment, candidates.size());
+      int servingReplicas = enabledCandidates.size();
+      if (TableReplicaHealth.shouldMeasure(expectedReplicas)) {
+        int percentOfReplicas = TableReplicaHealth.toPercent(servingReplicas, expectedReplicas);
+        if (percentOfReplicas < minPercentOfReplicas) {
+          minPercentOfReplicas = percentOfReplicas;
+          numSegmentsAtMinPercentOfReplicas = 1;
+        } else if (percentOfReplicas == minPercentOfReplicas) {
+          numSegmentsAtMinPercentOfReplicas++;
+        }
+      }
       if (!enabledCandidates.isEmpty()) {
         instanceCandidatesMap.put(segment, enabledCandidates);
       } else {
@@ -375,6 +440,8 @@ abstract class BaseInstanceSelector implements InstanceSelector {
     }
 
     _segmentStates = new SegmentStates(instanceCandidatesMap, servingInstances, unavailableSegments);
+    _replicaHealth = new TableReplicaHealth(minPercentOfReplicas, numSegmentsAtMinPercentOfReplicas,
+        unavailableSegments.size());
   }
 
   private List<SegmentInstanceCandidate> getEnabledCandidatesAndAddToServingInstances(
@@ -390,25 +457,19 @@ abstract class BaseInstanceSelector implements InstanceSelector {
     return enabledCandidates;
   }
 
-  /**
-   * {@inheritDoc}
-   *
-   * <p>Updates the cached enabled instances and re-calculates {@code segmentToEnabledInstancesMap} and
-   * {@code unavailableSegments} based on the cached states.
-   */
+  /// {@inheritDoc}
+  ///
+  /// Updates the cached enabled instances and re-calculates [#_segmentStates].
   @Override
   public void onInstancesChange(Set<String> enabledInstances, List<String> changedInstances) {
     _enabledInstances = enabledInstances;
     refreshSegmentStates();
   }
 
-  /**
-   * {@inheritDoc}
-   *
-   * <p>Updates the cached maps ({@code segmentToOnlineInstancesMap}, {@code segmentToOfflineInstancesMap} and
-   * {@code instanceToSegmentsMap}) and re-calculates {@code segmentToEnabledInstancesMap} and
-   * {@code unavailableSegments} based on the cached states.
-   */
+  /// {@inheritDoc}
+  ///
+  /// Updates the cached maps ([#_oldSegmentCandidatesMap] and [#_newSegmentStateMap], and re-calculates
+  /// [#_segmentStates] based on the cached states.
   @Override
   public void onAssignmentChange(IdealState idealState, ExternalView externalView, Set<String> onlineSegments) {
     Map<String, Long> newSegmentCreationTimeMap =
@@ -417,9 +478,7 @@ abstract class BaseInstanceSelector implements InstanceSelector {
     refreshSegmentStates();
   }
 
-  /**
-   * Returns a map from new segment to their creation time based on the existing in-memory states.
-   */
+  /// Returns a map from new segment to their creation time based on the existing in-memory states.
   Map<String, Long> getNewSegmentCreationTimeMapFromExistingStates(IdealState idealState, ExternalView externalView,
       Set<String> onlineSegments) {
     Map<String, Long> newSegmentCreationTimeMap = new HashMap<>();
@@ -456,7 +515,7 @@ abstract class BaseInstanceSelector implements InstanceSelector {
   public SelectionResult select(BrokerRequest brokerRequest, List<String> segments, long requestId) {
     Map<String, String> queryOptions =
         (brokerRequest.getPinotQuery() != null && brokerRequest.getPinotQuery().getQueryOptions() != null)
-            ? brokerRequest.getPinotQuery().getQueryOptions() : Collections.emptyMap();
+            ? brokerRequest.getPinotQuery().getQueryOptions() : Map.of();
     int requestIdInt = (int) (requestId % MAX_REQUEST_ID);
     // Copy the volatile reference so that segmentToInstanceMap and unavailableSegments can have a consistent view of
     // the state.
@@ -464,8 +523,9 @@ abstract class BaseInstanceSelector implements InstanceSelector {
     Pair<Map<String, String>, Map<String, String>> segmentToInstanceMap =
         select(segments, requestIdInt, segmentStates, queryOptions);
     Set<String> unavailableSegments = segmentStates.getUnavailableSegments();
+
     if (unavailableSegments.isEmpty()) {
-      return new SelectionResult(segmentToInstanceMap, Collections.emptyList(), 0);
+      return new SelectionResult(segmentToInstanceMap, List.of(), 0);
     } else {
       List<String> unavailableSegmentsForRequest = new ArrayList<>();
       for (String segment : segments) {
@@ -475,11 +535,6 @@ abstract class BaseInstanceSelector implements InstanceSelector {
       }
       return new SelectionResult(segmentToInstanceMap, unavailableSegmentsForRequest, 0);
     }
-  }
-
-  protected boolean isUseFixedReplica(Map<String, String> queryOptions) {
-    Boolean queryOption = QueryOptionsUtils.isUseFixedReplica(queryOptions);
-    return queryOption != null ? queryOption : _useFixedReplica;
   }
 
   @Override
@@ -500,12 +555,10 @@ abstract class BaseInstanceSelector implements InstanceSelector {
     return pool;
   }
 
-  /**
-   * Selects the server instances for the given segments based on the request id and segment states. Returns two maps
-   * from segment to selected server instance hosting the segment. The 2nd map is for optional segments. The optional
-   * segments are used to get the new segments that is not online yet. Instead of simply skipping them by broker at
-   * routing time, we can send them to servers and let servers decide how to handle them.
-   */
-  abstract Pair<Map<String, String>, Map<String, String>/*optional segments*/> select(List<String> segments,
+  /// Selects the server instances for the given segments based on the request id and segment states. Returns two maps
+  /// from segment to selected server instance hosting the segment. The 2nd map is for optional segments. The optional
+  /// segments are used to get the new segments that are not online yet. Instead of simply skipping them by broker at
+  /// routing time, we can send them to servers and let servers decide how to handle them.
+  protected abstract Pair<Map<String, String>, Map<String, String>/*optional segments*/> select(List<String> segments,
       int requestId, SegmentStates segmentStates, Map<String, String> queryOptions);
 }
