@@ -18,9 +18,7 @@
  */
 package org.apache.pinot.core.auth;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -35,44 +33,44 @@ public class BasicAuthTest {
 
   @Test
   public void testBasicAuthPrincipal() {
-    Assert.assertTrue(new BasicAuthPrincipal("name", "token", ImmutableSet.of("myTable"), Collections.emptySet(),
+    Assert.assertTrue(new BasicAuthPrincipal("name", "token", ImmutableSet.of("myTable"), Set.of(),
         ImmutableSet.of("READ"))
         .hasTable("myTable"));
     Assert.assertTrue(new BasicAuthPrincipal("name", "token", ImmutableSet.of("myTable", "myTable1"),
-        Collections.emptySet(), ImmutableSet.of("Read"))
+        Set.of(), ImmutableSet.of("Read"))
         .hasTable("myTable1"));
-    Assert.assertFalse(new BasicAuthPrincipal("name", "token", ImmutableSet.of("myTable"), Collections.emptySet(),
+    Assert.assertFalse(new BasicAuthPrincipal("name", "token", ImmutableSet.of("myTable"), Set.of(),
         ImmutableSet.of("read"))
         .hasTable("myTable1"));
     Assert.assertFalse(new BasicAuthPrincipal("name", "token", ImmutableSet.of("myTable", "myTable1"),
-        Collections.emptySet(), ImmutableSet.of("read"))
+        Set.of(), ImmutableSet.of("read"))
         .hasTable("myTable2"));
     Assert.assertFalse(new BasicAuthPrincipal("name", "token", ImmutableSet.of("myTable"), ImmutableSet.of("myTable"),
         ImmutableSet.of("read"))
         .hasTable("myTable"));
-    Assert.assertFalse(new BasicAuthPrincipal("name", "token", Collections.emptySet(), ImmutableSet.of("myTable"),
+    Assert.assertFalse(new BasicAuthPrincipal("name", "token", Set.of(), ImmutableSet.of("myTable"),
         ImmutableSet.of("read"))
         .hasTable("myTable"));
     Assert.assertTrue(new BasicAuthPrincipal("name", "token", ImmutableSet.of("myTable"), ImmutableSet.of("myTable1"),
         ImmutableSet.of("read"))
         .hasTable("myTable"));
 
-    Assert.assertTrue(new BasicAuthPrincipal("name", "token", ImmutableSet.of("myTable"), Collections.emptySet(),
+    Assert.assertTrue(new BasicAuthPrincipal("name", "token", ImmutableSet.of("myTable"), Set.of(),
         ImmutableSet.of("READ"))
         .hasPermission("read"));
-    Assert.assertTrue(new BasicAuthPrincipal("name", "token", ImmutableSet.of("myTable"), Collections.emptySet(),
+    Assert.assertTrue(new BasicAuthPrincipal("name", "token", ImmutableSet.of("myTable"), Set.of(),
         ImmutableSet.of("Read"))
         .hasPermission("READ"));
-    Assert.assertTrue(new BasicAuthPrincipal("name", "token", ImmutableSet.of("myTable"), Collections.emptySet(),
+    Assert.assertTrue(new BasicAuthPrincipal("name", "token", ImmutableSet.of("myTable"), Set.of(),
         ImmutableSet.of("read"))
         .hasPermission("Read"));
-    Assert.assertFalse(new BasicAuthPrincipal("name", "token", ImmutableSet.of("myTable"), Collections.emptySet(),
+    Assert.assertFalse(new BasicAuthPrincipal("name", "token", ImmutableSet.of("myTable"), Set.of(),
         ImmutableSet.of("read"))
         .hasPermission("write"));
 
-    Assert.assertEquals(new BasicAuthPrincipal("name", "token", ImmutableSet.of("myTable"), Collections.emptySet(),
-        ImmutableSet.of("read"), Map.of("myTable", ImmutableList.of("cityID > 100")))
-        .getRLSFilters("myTable"), Optional.of(ImmutableList.of("cityID > 100")));
+    Assert.assertEquals(new BasicAuthPrincipal("name", "token", ImmutableSet.of("myTable"), Set.of(),
+        ImmutableSet.of("read"), Map.of("myTable", List.of("cityID > 100")))
+        .getRLSFilters("myTable"), Optional.of(List.of("cityID > 100")));
   }
 
   @Test
@@ -89,7 +87,8 @@ public class BasicAuthTest {
     config.put("principals.user.lesserImportantStuff.rls", "region = 'US'");
 
     PinotConfiguration configuration = new PinotConfiguration(config);
-    List<BasicAuthPrincipal> principals = BasicAuthUtils.extractBasicAuthPrincipals(configuration, "principals");
+    List<BasicAuthPrincipal> principals = BasicAuthPrincipalUtils
+        .extractBasicAuthPrincipals(configuration, "principals");
 
     Assert.assertEquals(principals.size(), 2);
 
@@ -146,7 +145,7 @@ public class BasicAuthTest {
   public void testExtractBasicAuthPrincipalsNoPrincipals() {
     Map<String, Object> config = new HashMap<>();
     PinotConfiguration configuration = new PinotConfiguration(config);
-    BasicAuthUtils.extractBasicAuthPrincipals(configuration, "principals");
+    BasicAuthPrincipalUtils.extractBasicAuthPrincipals(configuration, "principals");
   }
 
   @Test(expectedExceptions = IllegalArgumentException.class, expectedExceptionsMessageRegExp = "must provide a "
@@ -155,7 +154,7 @@ public class BasicAuthTest {
     Map<String, Object> config = new HashMap<>();
     config.put("principals", "admin");
     PinotConfiguration configuration = new PinotConfiguration(config);
-    BasicAuthUtils.extractBasicAuthPrincipals(configuration, "principals");
+    BasicAuthPrincipalUtils.extractBasicAuthPrincipals(configuration, "principals");
   }
 
   @Test(expectedExceptions = IllegalArgumentException.class, expectedExceptionsMessageRegExp = ".* is not a valid name")
@@ -165,6 +164,6 @@ public class BasicAuthTest {
     config.put("principals.admin.password", "secret");
     config.put("principals.user.password", "secret");
     PinotConfiguration configuration = new PinotConfiguration(config);
-    BasicAuthUtils.extractBasicAuthPrincipals(configuration, "principals");
+    BasicAuthPrincipalUtils.extractBasicAuthPrincipals(configuration, "principals");
   }
 }
