@@ -18,8 +18,8 @@
  */
 package org.apache.pinot.core.query.reduce;
 
-import com.google.common.collect.ImmutableMap;
 import java.util.Iterator;
+import java.util.Map;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -37,6 +37,7 @@ import org.apache.pinot.core.transport.ServerRoutingInstance;
 import org.apache.pinot.spi.config.table.TableType;
 import org.apache.pinot.spi.env.PinotConfiguration;
 import org.apache.pinot.spi.exception.QueryErrorCode;
+import org.apache.pinot.spi.query.QueryThreadContext;
 import org.apache.pinot.spi.utils.CommonConstants;
 import org.apache.pinot.sql.parsers.CalciteSqlCompiler;
 import org.mockito.invocation.InvocationOnMock;
@@ -64,13 +65,13 @@ public class StreamingReduceServiceTest {
     // supposedly we can use TestNG's annotation like @Test(expectedExceptions = { IOException.class }) to verify
     // here we hope to verify deeper to make sure the thrown exception is nested inside the exception
     assertTrue(verifyException(() -> {
-          StreamingReduceService.processIterativeServerResponse(mock(StreamingReducer.class),
+      StreamingReduceService.processIterativeServerResponse(mock(StreamingReducer.class),
               threadPoolService,
-              ImmutableMap.of(routingInstance, mockedResponse),
+              Map.of(routingInstance, mockedResponse),
               1000,
               mock(ExecutionStatsAggregator.class));
-          return null;
-        }, cause -> cause.getMessage().contains(exceptionMessage))
+      return null;
+    }, cause -> cause.getMessage().contains(exceptionMessage))
     );
   }
 
@@ -93,13 +94,13 @@ public class StreamingReduceServiceTest {
     //We cannot use TestNG's annotation like @Test(expectedExceptions = { IOException.class }) to verify
     // because the Exception we hope to verify is nested inside the final exception.
     assertTrue(verifyException(() -> {
-          StreamingReduceService.processIterativeServerResponse(mock(StreamingReducer.class),
+      StreamingReduceService.processIterativeServerResponse(mock(StreamingReducer.class),
               threadPoolService,
-              ImmutableMap.of(routingInstance, mockedResponse),
+              Map.of(routingInstance, mockedResponse),
               10,
               mock(ExecutionStatsAggregator.class));
-          return null;
-        },
+      return null;
+    },
         (cause) -> cause instanceof TimeoutException));
   }
 
@@ -136,7 +137,10 @@ public class StreamingReduceServiceTest {
 
     BrokerMetrics metrics = mock(BrokerMetrics.class);
     // Execute
-    BrokerResponseNative response = service.reduceOnStreamResponse(brokerRequest, serverResponseMap, 1000, metrics);
+    BrokerResponseNative response;
+    try (QueryThreadContext ignore = QueryThreadContext.openForSseTest()) {
+      response = service.reduceOnStreamResponse(brokerRequest, serverResponseMap, 1000, metrics);
+    }
 
     // Validate the SERVER_SEGMENT_MISSING was filtered out
     boolean hasMissing = response.getExceptions()
