@@ -20,10 +20,9 @@ package org.apache.pinot.query.planner.physical.v2.opt.rules;
 
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Preconditions;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.Deque;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -43,16 +42,20 @@ import org.apache.pinot.calcite.rel.hint.PinotHintOptions;
 import org.apache.pinot.common.config.provider.TableCache;
 import org.apache.pinot.common.metrics.BrokerMeter;
 import org.apache.pinot.common.metrics.BrokerMetrics;
+import org.apache.pinot.common.request.BrokerRequest;
 import org.apache.pinot.common.request.DataSource;
 import org.apache.pinot.common.request.PinotQuery;
 import org.apache.pinot.common.utils.DatabaseUtils;
 import org.apache.pinot.common.utils.LLCSegmentName;
 import org.apache.pinot.common.utils.UploadedRealtimeSegmentName;
 import org.apache.pinot.common.utils.config.QueryOptionsUtils;
+import org.apache.pinot.core.routing.LogicalTableRouteInfo;
+import org.apache.pinot.core.routing.LogicalTableRouteProvider;
 import org.apache.pinot.core.routing.RoutingManager;
 import org.apache.pinot.core.routing.RoutingTable;
 import org.apache.pinot.core.routing.SegmentsToQuery;
 import org.apache.pinot.core.routing.TablePartitionInfo;
+import org.apache.pinot.core.routing.TableRouteInfo;
 import org.apache.pinot.core.routing.timeboundary.TimeBoundaryInfo;
 import org.apache.pinot.core.transport.ServerInstance;
 import org.apache.pinot.query.context.PhysicalPlannerContext;
@@ -76,24 +79,21 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 
-/**
- * <h1>Overview</h1>
- * Assigns workers to all PRelNodes that are part of the leaf stage as determined by {@link PRelNode#isLeafStage()}.
- * The workers are mainly determined by the Table Scan, unless filter based server pruning is enabled.
- * <h1>Current Features</h1>
- * <ul>
- *   <li>
- *     Automatically detects partitioning and adds that information to PinotDataDistribution. This will be used
- *     in subsequent worker assignment steps to simplify Exchange.
- *   </li>
- * </ul>
- * <h1>Planned / Upcoming Features</h1>
- * <ul>
- *   <li>Support for look-up join.</li>
- *   <li>Support for partition parallelism and the colocated join hint. See F2 in #15455.</li>
- *   <li>Support for Hybrid Tables for automatic partitioning inference.</li>
- * </ul>
- */
+/// # Overview
+///
+/// Assigns workers to all PRelNodes that are part of the leaf stage as determined by [PRelNode#isLeafStage()].
+/// The workers are mainly determined by the Table Scan, unless filter based server pruning is enabled.
+///
+/// # Current Features
+///
+/// - Automatically detects partitioning and adds that information to PinotDataDistribution. This will be used
+///   in subsequent worker assignment steps to simplify Exchange.
+///
+/// # Planned / Upcoming Features
+///
+/// - Support for look-up join.
+/// - Support for partition parallelism and the colocated join hint. See F2 in #15455.
+/// - Support for Hybrid Tables for automatic partitioning inference.
 public class LeafStageWorkerAssignmentRule extends PRelOptRule {
   private static final Logger LOGGER = LoggerFactory.getLogger(LeafStageWorkerAssignmentRule.class);
   private static final int LIMIT_OF_INVALID_SEGMENTS_TO_LOG = 3;
@@ -118,7 +118,21 @@ public class LeafStageWorkerAssignmentRule extends PRelOptRule {
     if (call._currentNode.unwrap() instanceof TableScan) {
       PRelNode leafStageRoot = extractCurrentLeafStageParent(call._parents);
       leafStageRoot = leafStageRoot == null ? call._currentNode : leafStageRoot;
-      String tableName = getActualTableName((TableScan) call._currentNode.unwrap());
+      TableScan tableScan = (TableScan) call._currentNode.unwrap();
+      String tableName = getActualTableName(tableScan);
+
+      // Check if this is a logical table
+      if (tableName == null) {
+        String logicalTableName = getActualLogicalTableName(tableScan);
+        if (logicalTableName == null) {
+          throw new IllegalStateException(String.format(
+              "Table '%s' not found in physical or logical table cache",
+              getTableNameForLookup(tableScan)));
+        }
+        return assignLogicalTableScan((PhysicalTableScan) call._currentNode,
+            _physicalPlannerContext.getRequestId(), logicalTableName);
+      }
+
       PinotQuery pinotQuery = LeafStageToPinotQuery.createPinotQueryForRouting(tableName, leafStageRoot.unwrap(),
           !_physicalPlannerContext.isUseBrokerPruning());
       return assignTableScan((PhysicalTableScan) call._currentNode, _physicalPlannerContext.getRequestId(),
@@ -192,17 +206,24 @@ public class LeafStageWorkerAssignmentRule extends PRelOptRule {
     return tableScan.with(workerAssignmentResult._pinotDataDistribution, metadata);
   }
 
-  /**
-   * Assigns workers for the table-scan node, automatically detecting table partitioning whenever possible. The
-   * arguments to this method are minimal to facilitate unit-testing.
-   */
+  /// Assigns workers for the table-scan node, automatically detecting table partitioning whenever possible. The
+  /// arguments to this method are minimal to facilitate unit-testing.
   @VisibleForTesting
   static TableScanWorkerAssignmentResult assignTableScan(String tableName, List<String> fieldNames,
       InstanceIdToSegments instanceIdToSegments, Map<String, TablePartitionInfo> tpiMap,
       boolean inferInvalidPartitionSegment, boolean inferRealtimeSegmentPartition) {
     Set<String> tableTypes = instanceIdToSegments.getActiveTableTypes();
+    if (tableTypes.isEmpty()) {
+      // The table has a routing entry but no routable segments for either table type (e.g. an empty table, or all
+      // segments were pruned by the broker). Assign zero workers instead of throwing, mirroring the legacy
+      // WorkerManager. The resulting empty leaf stage is detected and short-circuited to an empty result on the
+      // broker (see PinotDispatchPlanner#finalizeDispatchableSubPlan).
+      List<String> noWorkers = List.of();
+      PinotDataDistribution emptyDistribution = new PinotDataDistribution(RelDistribution.Type.RANDOM_DISTRIBUTED,
+          noWorkers, noWorkers.hashCode(), null, null);
+      return new TableScanWorkerAssignmentResult(emptyDistribution, new HashMap<>());
+    }
     Set<String> partitionedTableTypes = tableTypes.stream().filter(tpiMap::containsKey).collect(Collectors.toSet());
-    Preconditions.checkState(!tableTypes.isEmpty(), "No routing entry for offline or realtime type");
     if (tableTypes.equals(partitionedTableTypes)) {
       // TODO(mse-physical): Support auto-partitioning inference for Hybrid tables.
       if (partitionedTableTypes.size() == 1) {
@@ -254,10 +275,8 @@ public class LeafStageWorkerAssignmentRule extends PRelOptRule {
     return new TableScanWorkerAssignmentResult(pinotDataDistribution, workerIdToSegmentsMap);
   }
 
-  /**
-   * Tries to assign workers for the table-scan node to generate a partitioned data distribution. If this is not
-   * possible, we simply return null.
-   */
+  /// Tries to assign workers for the table-scan node to generate a partitioned data distribution. If this is not
+  /// possible, we simply return null.
   @Nullable
   @VisibleForTesting
   static TableScanWorkerAssignmentResult attemptPartitionedDistribution(String tableNameWithType,
@@ -363,9 +382,9 @@ public class LeafStageWorkerAssignmentRule extends PRelOptRule {
         segmentsForWorker.addAll(segmentsByPartition.get(partitionNum));
       }
       workers.set(workerId, String.format("%s@%s", workerId, workers.get(workerId)));
-      workerIdToSegmentsMap.put(workerId, ImmutableMap.of(tableType, segmentsForWorker));
+      workerIdToSegmentsMap.put(workerId, Map.of(tableType, segmentsForWorker));
     }
-    HashDistributionDesc desc = new HashDistributionDesc(ImmutableList.of(keyIndex),
+    HashDistributionDesc desc = new HashDistributionDesc(List.of(keyIndex),
         DistHashFunction.valueOf(function.toUpperCase()), numPartitions);
     PinotDataDistribution dataDistribution = new PinotDataDistribution(RelDistribution.Type.HASH_DISTRIBUTED,
         workers, workers.hashCode(), ImmutableSet.of(desc), null);
@@ -402,13 +421,10 @@ public class LeafStageWorkerAssignmentRule extends PRelOptRule {
         segmentsByPartition, segmentsWithInvalidPartition);
   }
 
-  /**
-   * Infers partition from invalid segments if the passed flag is set to true. Inference is done by simply:
-   * <ol>
-   *   <li>Extracting the stream partition number from the segment name</li>
-   *   <li>Doing a modulus with the numPartitions.</li>
-   * </ol>
-   */
+  /// Infers partition from invalid segments if the passed flag is set to true. Inference is done by simply:
+  ///
+  /// 1. Extracting the stream partition number from the segment name
+  /// 2. Doing a modulus with the numPartitions.
   @VisibleForTesting
   static Map<Integer, List<String>> getInvalidSegmentsByInferredPartition(@Nullable List<String> invalidSegments,
       boolean inferPartitionsForInvalidSegments, String tableNameWithType, int numPartitions) {
@@ -492,12 +508,10 @@ public class LeafStageWorkerAssignmentRule extends PRelOptRule {
     return result;
   }
 
-  /**
-   * Acquire routing table for items listed in TableScanNode.
-   *
-   * @param pinotQuery the PinotQuery with filters, project and table-scan information.
-   * @return keyed-map from table type(s) to routing table(s).
-   */
+  /// Acquire routing table for items listed in TableScanNode.
+  ///
+  /// @param pinotQuery the PinotQuery with filters, project and table-scan information.
+  /// @return keyed-map from table type(s) to routing table(s).
   private Map<String, RoutingTable> getRoutingTable(PinotQuery pinotQuery, long requestId) {
     String tableName = pinotQuery.getDataSource().getTableName();
     String rawTableName = TableNameBuilder.extractRawTableName(tableName);
@@ -534,12 +548,168 @@ public class LeafStageWorkerAssignmentRule extends PRelOptRule {
     return tmp == null ? Map.of() : tmp;
   }
 
-  private String getActualTableName(TableScan tableScan) {
+  /// Gets the table name from the TableScan in a format that can be looked up in the table cache.
+  /// This follows the same logic as [org.apache.pinot.query.catalog.PinotCatalog#getTable(String)].
+  private String getTableNameForLookup(TableScan tableScan) {
     RelOptTable table = tableScan.getTable();
     List<String> qualifiedName = table.getQualifiedName();
-    String tmp = qualifiedName.size() == 1 ? qualifiedName.get(0)
+    String tableName = qualifiedName.size() == 1 ? qualifiedName.get(0)
         : DatabaseUtils.constructFullyQualifiedTableName(qualifiedName.get(0), qualifiedName.get(1));
-    return _tableCache.getActualTableName(tmp);
+    // Extract raw table name (removes _OFFLINE/_REALTIME suffix if present)
+    return TableNameBuilder.extractRawTableName(tableName);
+  }
+
+  @Nullable
+  private String getActualTableName(TableScan tableScan) {
+    String tableName = getTableNameForLookup(tableScan);
+    return _tableCache.getActualTableName(tableName);
+  }
+
+  @Nullable
+  private String getActualLogicalTableName(TableScan tableScan) {
+    String tableName = getTableNameForLookup(tableScan);
+    return _tableCache.getActualLogicalTableName(tableName);
+  }
+
+  /// Assigns workers for a logical table scan. A logical table maps to multiple physical tables.
+  private PhysicalTableScan assignLogicalTableScan(PhysicalTableScan tableScan, long requestId,
+      String logicalTableName) {
+    Map<String, String> tableOptions = getTableOptions(tableScan.getHints());
+
+    // Step 1: Get LogicalTableRouteInfo using LogicalTableRouteProvider
+    // Use MultiClusterRoutingContext if available to support logical tables with physical tables from remote clusters
+    LogicalTableRouteProvider tableRouteProvider =
+        new LogicalTableRouteProvider(_physicalPlannerContext.getMultiClusterRoutingContext());
+    LogicalTableRouteInfo logicalTableRouteInfo = new LogicalTableRouteInfo();
+    tableRouteProvider.fillTableConfigMetadata(logicalTableRouteInfo, logicalTableName, _tableCache);
+    tableRouteProvider.fillRouteMetadata(logicalTableRouteInfo, _routingManager);
+
+    // Step 2: Build broker requests for route calculation
+    BrokerRequest offlineBrokerRequest = null;
+    BrokerRequest realtimeBrokerRequest = null;
+
+    if (logicalTableRouteInfo.hasOffline()) {
+      offlineBrokerRequest = CalciteSqlCompiler.compileToBrokerRequest(
+          "SELECT * FROM \"" + logicalTableRouteInfo.getOfflineTableName() + "\"");
+    }
+
+    if (logicalTableRouteInfo.hasRealtime()) {
+      realtimeBrokerRequest = CalciteSqlCompiler.compileToBrokerRequest(
+          "SELECT * FROM \"" + logicalTableRouteInfo.getRealtimeTableName() + "\"");
+    }
+
+    // Step 3: Calculate routes
+    tableRouteProvider.calculateRoutes(logicalTableRouteInfo, _routingManager,
+        offlineBrokerRequest, realtimeBrokerRequest, requestId);
+
+    // Step 4: Build worker assignment from LogicalTableRouteInfo
+    return buildLogicalTableScanResult(tableScan, logicalTableName, logicalTableRouteInfo, tableOptions);
+  }
+
+  private PhysicalTableScan buildLogicalTableScanResult(PhysicalTableScan tableScan, String logicalTableName,
+      LogicalTableRouteInfo logicalTableRouteInfo, Map<String, String> tableOptions) {
+    LogicalTableScanWorkerAssignmentResult result = buildLogicalTableWorkerAssignment(
+        logicalTableName, logicalTableRouteInfo, tableOptions);
+
+    // Cache the server instance mappings
+    for (ServerInstance serverInstance : result._serverInstances) {
+      _physicalPlannerContext.getInstanceIdToQueryServerInstance().computeIfAbsent(
+          serverInstance.getInstanceId(), (ignore) -> new QueryServerInstance(serverInstance));
+    }
+
+    return tableScan.with(result._pinotDataDistribution, result._tableScanMetadata);
+  }
+
+  /// Builds worker assignment for a logical table scan.
+  @VisibleForTesting
+  static LogicalTableScanWorkerAssignmentResult buildLogicalTableWorkerAssignment(
+      String logicalTableName, LogicalTableRouteInfo logicalTableRouteInfo, Map<String, String> tableOptions) {
+    // Collect server to segments mapping across all physical tables
+    Map<ServerInstance, Map<String, List<String>>> serverInstanceToLogicalSegmentsMap = new HashMap<>();
+
+    // Process offline tables
+    if (logicalTableRouteInfo.getOfflineTables() != null) {
+      for (TableRouteInfo physicalTableRoute : logicalTableRouteInfo.getOfflineTables()) {
+        if (physicalTableRoute.getOfflineRoutingTable() != null) {
+          transferToServerInstanceLogicalSegmentsMap(physicalTableRoute.getOfflineTableName(),
+              physicalTableRoute.getOfflineRoutingTable(), serverInstanceToLogicalSegmentsMap);
+        }
+      }
+    }
+
+    // Process realtime tables
+    if (logicalTableRouteInfo.getRealtimeTables() != null) {
+      for (TableRouteInfo physicalTableRoute : logicalTableRouteInfo.getRealtimeTables()) {
+        if (physicalTableRoute.getRealtimeRoutingTable() != null) {
+          transferToServerInstanceLogicalSegmentsMap(physicalTableRoute.getRealtimeTableName(),
+              physicalTableRoute.getRealtimeRoutingTable(), serverInstanceToLogicalSegmentsMap);
+        }
+      }
+    }
+
+    // Sort server instances to ensure deterministic worker ID assignment
+    List<Map.Entry<ServerInstance, Map<String, List<String>>>> sortedServerInstanceToSegmentsMap =
+        new ArrayList<>(serverInstanceToLogicalSegmentsMap.entrySet());
+    sortedServerInstanceToSegmentsMap.sort(Comparator.comparing(entry -> entry.getKey().getInstanceId()));
+
+    // Assign 1 worker per server
+    int numWorkers = sortedServerInstanceToSegmentsMap.size();
+    Map<Integer, Map<String, List<String>>> workerIdToLogicalTableSegmentsMap = new HashMap<>();
+    List<String> workers = new ArrayList<>();
+    List<ServerInstance> serverInstances = new ArrayList<>();
+
+    for (int workerId = 0; workerId < numWorkers; workerId++) {
+      Map.Entry<ServerInstance, Map<String, List<String>>> entry = sortedServerInstanceToSegmentsMap.get(workerId);
+      ServerInstance serverInstance = entry.getKey();
+      Map<String, List<String>> physicalTableSegments = entry.getValue();
+
+      workerIdToLogicalTableSegmentsMap.put(workerId, physicalTableSegments);
+      workers.add(String.format("%s@%s", workerId, serverInstance.getInstanceId()));
+      serverInstances.add(serverInstance);
+    }
+
+    // Build unavailable segments map
+    Map<String, Set<String>> unavailableSegmentsMap = new HashMap<>();
+    List<String> unavailableSegments = logicalTableRouteInfo.getUnavailableSegments();
+    if (CollectionUtils.isNotEmpty(unavailableSegments)) {
+      unavailableSegmentsMap.put(logicalTableName, new HashSet<>(unavailableSegments));
+    }
+
+    // Get time boundary info
+    TimeBoundaryInfo timeBoundaryInfo = logicalTableRouteInfo.getTimeBoundaryInfo();
+
+    // Build distribution - use RANDOM_DISTRIBUTED for logical tables for now
+    // TODO: Add support for partitioned distribution when all physical tables share the same partitioning
+    RelDistribution.Type distType = workers.size() == 1 ? RelDistribution.Type.SINGLETON
+        : RelDistribution.Type.RANDOM_DISTRIBUTED;
+    PinotDataDistribution pinotDataDistribution = new PinotDataDistribution(distType, workers, workers.hashCode(),
+        null, null);
+
+    // Create TableScanMetadata for logical table
+    TableScanMetadata metadata = new TableScanMetadata(
+        Set.of(logicalTableName),
+        workerIdToLogicalTableSegmentsMap,
+        tableOptions,
+        unavailableSegmentsMap,
+        timeBoundaryInfo,
+        true  // isLogicalTable
+    );
+
+    return new LogicalTableScanWorkerAssignmentResult(pinotDataDistribution, metadata, serverInstances);
+  }
+
+  /// Helper method to transfer routing table entries to the server instance logical segments map.
+  @VisibleForTesting
+  static void transferToServerInstanceLogicalSegmentsMap(String physicalTableName,
+      Map<ServerInstance, SegmentsToQuery> routingTable,
+      Map<ServerInstance, Map<String, List<String>>> serverInstanceToLogicalSegmentsMap) {
+    for (Map.Entry<ServerInstance, SegmentsToQuery> entry : routingTable.entrySet()) {
+      ServerInstance serverInstance = entry.getKey();
+      List<String> segments = entry.getValue().getSegments();
+      serverInstanceToLogicalSegmentsMap
+          .computeIfAbsent(serverInstance, k -> new HashMap<>())
+          .put(physicalTableName, segments);
+    }
   }
 
   static class TableScanWorkerAssignmentResult {
@@ -550,6 +720,21 @@ public class LeafStageWorkerAssignmentRule extends PRelOptRule {
         Map<Integer, Map<String, List<String>>> workerIdToSegmentsMap) {
       _pinotDataDistribution = pinotDataDistribution;
       _workerIdToSegmentsMap = workerIdToSegmentsMap;
+    }
+  }
+
+  /// Result of building worker assignment for a logical table scan.
+  @VisibleForTesting
+  static class LogicalTableScanWorkerAssignmentResult {
+    final PinotDataDistribution _pinotDataDistribution;
+    final TableScanMetadata _tableScanMetadata;
+    final List<ServerInstance> _serverInstances;
+
+    LogicalTableScanWorkerAssignmentResult(PinotDataDistribution pinotDataDistribution,
+        TableScanMetadata tableScanMetadata, List<ServerInstance> serverInstances) {
+      _pinotDataDistribution = pinotDataDistribution;
+      _tableScanMetadata = tableScanMetadata;
+      _serverInstances = serverInstances;
     }
   }
 
