@@ -19,6 +19,7 @@
 package org.apache.pinot.query.mailbox.channel;
 
 import io.grpc.Context;
+import io.grpc.stub.ServerCallStreamObserver;
 import io.grpc.stub.StreamObserver;
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
@@ -36,32 +37,48 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 
-/**
- * {@code MailboxContentObserver} is the content streaming observer used to receive mailbox content.
- *
- * <p>When the observer onNext() is called (e.g. when data packet has arrived at the receiving end), it puts the
- * mailbox content to the receiving mailbox buffer; response with the remaining buffer size of the receiving mailbox
- * to the sender side.
- */
+/// `MailboxContentObserver` is the content streaming observer used to receive mailbox content.
+///
+/// When the observer onNext() is called (e.g. when data packet has arrived at the receiving end), it puts the
+/// mailbox content to the receiving mailbox buffer; response with the remaining buffer size of the receiving mailbox
+/// to the sender side.
 public class MailboxContentObserver implements StreamObserver<MailboxContent> {
   private static final Logger LOGGER = LoggerFactory.getLogger(MailboxContentObserver.class);
 
   private final MailboxService _mailboxService;
-  private final StreamObserver<MailboxStatus> _responseObserver;
+  private final ServerCallStreamObserver<MailboxStatus> _responseObserver;
+  private final boolean _manualInboundFlowControlEnabled;
+  private final List<ByteBuffer> _mailboxBuffers = Collections.synchronizedList(new ArrayList<>());
+  private boolean _closedStream = false;
 
-  private final List<ByteBuffer> _mailboxBuffers;
-  private transient ReceivingMailbox _mailbox;
+  private volatile ReceivingMailbox _mailbox;
 
-  public MailboxContentObserver(
-    MailboxService mailboxService, String mailboxId, StreamObserver<MailboxStatus> responseObserver) {
+  public MailboxContentObserver(MailboxService mailboxService, String mailboxId,
+      ServerCallStreamObserver<MailboxStatus> responseObserver, boolean manualInboundFlowControlEnabled) {
     _mailboxService = mailboxService;
-    _mailbox = StringUtils.isNotBlank(mailboxId) ? _mailboxService.getReceivingMailbox(mailboxId) : null;
     _responseObserver = responseObserver;
-    _mailboxBuffers = new ArrayList<>();
+    _manualInboundFlowControlEnabled = manualInboundFlowControlEnabled;
+    _mailbox = StringUtils.isNotBlank(mailboxId) ? _mailboxService.getReceivingMailbox(mailboxId) : null;
   }
 
   @Override
   public void onNext(MailboxContent mailboxContent) {
+    if (_manualInboundFlowControlEnabled) {
+      // Replenish one inbound-message credit immediately, before any work that might block (e.g., the
+      // offerData lock acquisition inside _mailbox.offerRaw). This decouples the sender's HTTP/2 window
+      // replenishment from the receiver's per-message processing time — gRPC will issue the WINDOW_UPDATE
+      // for this message as soon as this request(1) call sets the credit, not waiting for onNext to return.
+      // Do not move this below the blocking _mailbox.offerRaw call — it must replenish credit
+      // BEFORE the offer so the receiver doesn't gate the sender on per-message application drain time.
+      _responseObserver.request(1);
+    }
+    // Else: gRPC's auto-inbound is in place and will automatically replenish 1 credit after onNext
+    // returns. Do not call request(1) here in that mode — it would double-count the credit and break
+    // the 1-in-flight semantics that the rollback knob restores.
+    if (_closedStream) {
+      LOGGER.debug("Received a late message once the stream was closed. Ignoring it.");
+      return;
+    }
     String mailboxId = mailboxContent.getMailboxId();
     if (_mailbox == null) {
       _mailbox = _mailboxService.getReceivingMailbox(mailboxId);
@@ -72,33 +89,26 @@ public class MailboxContentObserver implements StreamObserver<MailboxContent> {
     }
     try {
       long timeoutMs = Context.current().getDeadline().timeRemaining(TimeUnit.MILLISECONDS);
-      List<ByteBuffer> buffers = new ArrayList<>(_mailboxBuffers);
-      _mailboxBuffers.clear();
-      ReceivingMailbox.ReceivingMailboxStatus status = _mailbox.offerRaw(buffers, timeoutMs);
+      ReceivingMailbox.ReceivingMailboxStatus status = _mailbox.offerRaw(_mailboxBuffers, timeoutMs);
       switch (status) {
         case SUCCESS:
           _responseObserver.onNext(MailboxStatus.newBuilder().setMailboxId(mailboxId)
               .putMetadata(ChannelUtils.MAILBOX_METADATA_BUFFER_SIZE_KEY,
                   Integer.toString(_mailbox.getNumPendingBlocks())).build());
           break;
-        case CANCELLED:
-          LOGGER.warn("Mailbox: {} already cancelled from upstream", mailboxId);
-          cancelStream();
-          break;
-        case FIRST_ERROR:
-          return;
-        case ERROR:
-          LOGGER.warn("Mailbox: {} already errored out (received error block before)", mailboxId);
-          cancelStream();
-          break;
-        case TIMEOUT:
-          LOGGER.warn("Timed out adding block into mailbox: {} with timeout: {}ms", mailboxId, timeoutMs);
-          cancelStream();
-          break;
-        case EARLY_TERMINATED:
-          LOGGER.debug("Mailbox: {} has been early terminated", mailboxId);
+        case WAITING_EOS:
+          // The receiving mailbox is early terminated, inform the sender to stop sending more data. Only EOS block is
+          // expected to be sent afterward.
           _responseObserver.onNext(MailboxStatus.newBuilder().setMailboxId(mailboxId)
               .putMetadata(ChannelUtils.MAILBOX_METADATA_REQUEST_EARLY_TERMINATE, "true").build());
+          break;
+        case LAST_BLOCK:
+          LOGGER.debug("Mailbox: {} has received the last block, closing the stream", mailboxId);
+          closeStream();
+          break;
+        case ALREADY_TERMINATED:
+          // this can happen when the mailbox is cancelled by the receiver. No more messages are going to be accepted.
+          closeStream();
           break;
         default:
           throw new IllegalStateException("Unsupported mailbox status: " + status);
@@ -106,16 +116,19 @@ public class MailboxContentObserver implements StreamObserver<MailboxContent> {
     } catch (Exception e) {
       String errorMessage = "Caught exception while processing blocks for mailbox: " + mailboxId;
       LOGGER.error(errorMessage, e);
+      closeStream();
       _mailbox.setErrorBlock(
-          ErrorMseBlock.fromException(new RuntimeException(errorMessage, e)), Collections.emptyList());
-      cancelStream();
+          ErrorMseBlock.fromException(new RuntimeException(errorMessage, e)), List.of());
+    } finally {
+      _mailboxBuffers.clear();
     }
   }
 
-  private void cancelStream() {
+  private void closeStream() {
     try {
       // NOTE: DO NOT use onError() because it will terminate the stream, and sender might not get the callback
       _responseObserver.onCompleted();
+      _closedStream = true;
     } catch (Exception e) {
       // Exception can be thrown if the stream is already closed, so we simply ignore it
       LOGGER.debug("Caught exception cancelling mailbox: {}", _mailbox != null ? _mailbox.getId() : "unknown", e);
@@ -124,18 +137,28 @@ public class MailboxContentObserver implements StreamObserver<MailboxContent> {
 
   @Override
   public void onError(Throwable t) {
-    LOGGER.warn("Error on receiver side", t);
+    LOGGER.warn("Receiving mailbox received an error from sender side", t);
+    _mailboxBuffers.clear();
     if (_mailbox != null) {
       String msg = t != null ? t.getMessage() : "Unknown";
-      _mailbox.setErrorBlock(ErrorMseBlock.fromError(
-          QueryErrorCode.QUERY_CANCELLATION, "Cancelled by sender with exception: " + msg), List.of());
+      String errorMessage = "GRPC mailbox cancelled by sender with exception: " + msg;
+      _mailbox.setErrorBlock(ErrorMseBlock.fromError(QueryErrorCode.INTERNAL, errorMessage), List.of());
     } else {
       LOGGER.error("Got error before mailbox is set up", t);
+    }
+    if (!_closedStream) {
+      _closedStream = true;
+      _responseObserver.onError(t);
     }
   }
 
   @Override
   public void onCompleted() {
+    _mailboxBuffers.clear();
+    if (_closedStream) {
+      return;
+    }
+    _closedStream = true;
     try {
       _responseObserver.onCompleted();
     } catch (Exception e) {
