@@ -19,7 +19,6 @@
 package org.apache.pinot.query.runtime.operator;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -165,7 +164,7 @@ public class OpChainTest {
     }
 
     @Override
-    public void registerExecution(long time, int numRows) {
+    public void registerExecution(long time, int numRows, long memoryUsedBytes, long gcTimeMs) {
       _statMap.merge(LiteralValueOperator.StatKey.EXECUTION_TIME_MS, time);
       _statMap.merge(LiteralValueOperator.StatKey.EMITTED_ROWS, numRows);
     }
@@ -186,7 +185,7 @@ public class OpChainTest {
     }
 
     @Override
-    protected StatMap<?> copyStatMaps() {
+    public StatMap<LiteralValueOperator.StatKey> copyStatMaps() {
       return new StatMap<>(_statMap);
     }
 
@@ -197,7 +196,7 @@ public class OpChainTest {
 
     @Override
     public List<MultiStageOperator> getChildOperators() {
-      return Collections.emptyList();
+      return List.of();
     }
 
     @Override
