@@ -30,6 +30,9 @@ import com.fasterxml.jackson.databind.ObjectWriter;
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.JsonNodeFactory;
 import com.fasterxml.jackson.databind.node.ObjectNode;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import com.fasterxml.jackson.datatype.jsr310.ser.LocalDateSerializer;
+import com.fasterxml.jackson.datatype.jsr310.ser.LocalTimeSerializer;
 import com.google.common.base.Preconditions;
 import com.google.common.collect.MapDifference;
 import com.google.common.collect.Maps;
@@ -40,11 +43,12 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.charset.StandardCharsets;
+import java.time.LocalDate;
+import java.time.LocalTime;
+import java.time.format.DateTimeFormatter;
 import java.util.AbstractMap;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -80,23 +84,48 @@ public class JsonUtils {
   public static final String SKIPPED_VALUE_REPLACEMENT = "$SKIPPED$";
   public static final int MAX_COMBINATIONS = 100_000;
   public static final List<Map<String, String>> SKIPPED_FLATTENED_RECORD =
-      Collections.singletonList(Collections.singletonMap(VALUE_KEY, SKIPPED_VALUE_REPLACEMENT));
+      List.of(Map.of(VALUE_KEY, SKIPPED_VALUE_REPLACEMENT));
 
   // For querying
   public static final String WILDCARD = "*";
 
 
-  // NOTE: Do not expose the ObjectMapper to prevent configuration change
-  private static final ObjectMapper DEFAULT_MAPPER = new ObjectMapper();
+  // NOTE: Do not expose the ObjectMapper to prevent configuration change.
+  //
+  // JavaTimeModule is registered so the LocalDate / LocalTime values produced by RecordExtractor (per the
+  // contract on org.apache.pinot.spi.data.readers.RecordExtractor) serialize correctly when they reach
+  // Jackson via PinotDataType.toJson. Each java.time type is bound to an explicit ISO-8601 formatter so the
+  // output is independent of SerializationFeature.WRITE_DATES_AS_TIMESTAMPS — the global flag stays at its
+  // default (true), so any java.util.Date / java.sql.Timestamp continues to serialize as numeric epoch
+  // millis (Timestamp.toString is JVM-timezone-dependent JDBC escape format, not ISO-8601, so a string form
+  // would be neither portable nor consistent across paths).
+  // Single shared JSR-310 module instance with ISO-8601 serializers for LocalDate / LocalTime. Safe to
+  // share across ObjectMappers — Jackson copies the module's handlers into each mapper at registration
+  // time, and the serializers themselves are stateless.
+  private static final JavaTimeModule JAVA_TIME_MODULE = buildJavaTimeModule();
+  private static final ObjectMapper DEFAULT_MAPPER = newObjectMapperWithJavaTime();
   public static final ObjectReader DEFAULT_READER = DEFAULT_MAPPER.reader();
   public static final ObjectWriter DEFAULT_WRITER = DEFAULT_MAPPER.writer();
   public static final ObjectWriter DEFAULT_PRETTY_WRITER = DEFAULT_MAPPER.writerWithDefaultPrettyPrinter();
   public static final ObjectReader READER_WITH_BIG_DECIMAL =
-      new ObjectMapper().enable(DeserializationFeature.USE_BIG_DECIMAL_FOR_FLOATS).reader();
+      newObjectMapperWithJavaTime().enable(DeserializationFeature.USE_BIG_DECIMAL_FOR_FLOATS).reader();
 
-  public static final TypeReference<HashMap<String, Object>> MAP_TYPE_REFERENCE =
-      new TypeReference<HashMap<String, Object>>() {
-      };
+  /// Returns a fresh [ObjectMapper] with the JSR-310 [JavaTimeModule] registered (ISO-8601 serializers for
+  /// `LocalDate` / `LocalTime`). Callers needing additional configuration (e.g. sorted map entries) can
+  /// chain `configure(...)` on the returned instance.
+  public static ObjectMapper newObjectMapperWithJavaTime() {
+    return new ObjectMapper().registerModule(JAVA_TIME_MODULE);
+  }
+
+  private static JavaTimeModule buildJavaTimeModule() {
+    JavaTimeModule module = new JavaTimeModule();
+    module.addSerializer(LocalDate.class, new LocalDateSerializer(DateTimeFormatter.ISO_LOCAL_DATE));
+    module.addSerializer(LocalTime.class, new LocalTimeSerializer(DateTimeFormatter.ISO_LOCAL_TIME));
+    return module;
+  }
+
+  public static final TypeReference<HashMap<String, Object>> MAP_TYPE_REFERENCE = new TypeReference<>() {
+  };
 
   public static <T> T stringToObject(String jsonString, Class<T> valueType)
       throws JsonProcessingException {
@@ -158,11 +187,6 @@ public class JsonUtils {
     return DEFAULT_READER.readTree(jsonString);
   }
 
-  public static Map<String, String> jsonNodeToStringMap(JsonNode jsonNode)
-      throws IOException {
-    return DEFAULT_READER.forType(MAP_TYPE_REFERENCE).readValue(jsonNode);
-  }
-
   public static JsonNode stringToJsonNodeWithBigDecimal(String jsonString)
       throws IOException {
     return READER_WITH_BIG_DECIMAL.readTree(jsonString);
@@ -186,9 +210,7 @@ public class JsonUtils {
     }
   }
 
-  /**
-   * Reads the first json object from the file that can contain multiple objects
-   */
+  /// Reads the first json object from the file that can contain multiple objects
   @Nullable
   public static JsonNode fileToFirstJsonNode(File jsonFile)
       throws IOException {
@@ -246,6 +268,21 @@ public class JsonUtils {
   public static Map<String, Object> jsonNodeToMap(JsonNode jsonNode)
       throws IOException {
     return DEFAULT_READER.forType(MAP_TYPE_REFERENCE).readValue(jsonNode);
+  }
+
+  public static Map<String, Object> stringToMap(String jsonString)
+      throws JsonProcessingException {
+    return DEFAULT_READER.forType(MAP_TYPE_REFERENCE).readValue(jsonString);
+  }
+
+  public static Map<String, Object> bytesToMap(byte[] jsonBytes)
+      throws IOException {
+    return DEFAULT_READER.forType(MAP_TYPE_REFERENCE).readValue(jsonBytes);
+  }
+
+  public static Map<String, Object> bytesToMap(byte[] jsonBytes, int offset, int length)
+      throws IOException {
+    return DEFAULT_READER.forType(MAP_TYPE_REFERENCE).readValue(jsonBytes, offset, length);
   }
 
   public static String objectToString(Object object)
@@ -337,46 +374,46 @@ public class JsonUtils {
     }
   }
 
-  /**
-   * Flattens the given json node.
-   * <p>Json array will be flattened into multiple records, where each record has a special key to store the index of
-   * the element.
-   * <pre>
-   * E.g.
-   * {
-   *   "name": "adam",
-   *   "addresses": [
-   *     {
-   *       "country": "us",
-   *       "street": "main st",
-   *       "number": 1
-   *     },
-   *     {
-   *       "country": "ca",
-   *       "street": "second st",
-   *       "number": 2
-   *     }
-   *   ]
-   * }
-   * -->
-   * [
-   *   {
-   *     ".name": "adam",
-   *     ".addresses.$index": "0",
-   *     ".addresses..country": "us",
-   *     ".addresses..street": "main st",
-   *     ".addresses..number": "1"
-   *   },
-   *   {
-   *     ".name": "adam",
-   *     ".addresses.$index": "1",
-   *     ".addresses..country": "ca",
-   *     ".addresses..street": "second st",
-   *     ".addresses..number": "2"
-   *   }
-   * ]
-   * </pre>
-   */
+  /// Flattens the given json node.
+  ///
+  /// Json array will be flattened into multiple records, where each record has a special key to store the index of
+  /// the element.
+  ///
+  /// ```
+  /// E.g.
+  /// {
+  ///   "name": "adam",
+  ///   "addresses": [
+  ///     {
+  ///       "country": "us",
+  ///       "street": "main st",
+  ///       "number": 1
+  ///     },
+  ///     {
+  ///       "country": "ca",
+  ///       "street": "second st",
+  ///       "number": 2
+  ///     }
+  ///   ]
+  /// }
+  /// -->
+  /// [
+  ///   {
+  ///     ".name": "adam",
+  ///     ".addresses.$index": "0",
+  ///     ".addresses..country": "us",
+  ///     ".addresses..street": "main st",
+  ///     ".addresses..number": "1"
+  ///   },
+  ///   {
+  ///     ".name": "adam",
+  ///     ".addresses.$index": "1",
+  ///     ".addresses..country": "ca",
+  ///     ".addresses..street": "second st",
+  ///     ".addresses..number": "2"
+  ///   }
+  /// ]
+  /// ```
   protected static List<Map<String, String>> flatten(JsonNode node, JsonIndexConfig jsonIndexConfig) {
     try {
       return flatten(node, jsonIndexConfig, 0, "$", false, createTree(jsonIndexConfig));
@@ -393,7 +430,7 @@ public class JsonUtils {
       String path, boolean includePathMatched, JsonSchemaTreeNode indexPathNode) {
     // Null
     if (node.isNull() || node.isMissingNode() || indexPathNode == null) {
-      return Collections.emptyList();
+      return List.of();
     }
 
     // Value
@@ -403,7 +440,7 @@ public class JsonUtils {
       if (0 < maxValueLength && maxValueLength < valueAsText.length()) {
         valueAsText = SKIPPED_VALUE_REPLACEMENT;
       }
-      return Collections.singletonList(Collections.singletonMap(VALUE_KEY, valueAsText));
+      return List.of(Map.of(VALUE_KEY, valueAsText));
     }
 
     Preconditions.checkArgument(node.isArray() || node.isObject(), "Unexpected node type: %s", node.getNodeType());
@@ -411,23 +448,23 @@ public class JsonUtils {
     // Do not flatten further for array and object when max level reached
     int maxLevels = jsonIndexConfig.getMaxLevels();
     if (maxLevels > 0 && level == maxLevels) {
-      return Collections.emptyList();
+      return List.of();
     }
 
     // Array
     if (node.isArray()) {
       if (jsonIndexConfig.isExcludeArray()) {
-        return Collections.emptyList();
+        return List.of();
       }
       int numChildren = node.size();
       if (numChildren == 0) {
-        return Collections.emptyList();
+        return List.of();
       }
       String childPath = path + ARRAY_PATH;
       IncludeResult includeResult =
           includePathMatched ? IncludeResult.MATCH : shouldInclude(jsonIndexConfig, childPath);
       if (!includeResult._shouldInclude) {
-        return Collections.emptyList();
+        return List.of();
       }
       List<Map<String, String>> results = new ArrayList<>(numChildren);
       for (int i = 0; i < numChildren; i++) {
@@ -456,9 +493,7 @@ public class JsonUtils {
     // Put all nested results (from array) into a list to be processed later
     List<List<Map<String, String>>> nestedResultsList = new ArrayList<>();
 
-    Iterator<Map.Entry<String, JsonNode>> fieldIterator = node.fields();
-    while (fieldIterator.hasNext()) {
-      Map.Entry<String, JsonNode> fieldEntry = fieldIterator.next();
+    for (Map.Entry<String, JsonNode> fieldEntry : node.properties()) {
       String field = fieldEntry.getKey();
       Set<String> excludeFields = jsonIndexConfig.getExcludeFields();
       if (excludeFields != null && excludeFields.contains(field)) {
@@ -507,9 +542,9 @@ public class JsonUtils {
     int nestedResultsListSize = nestedResultsList.size();
     if (nestedResultsListSize == 0) {
       if (nonNestedResult.isEmpty()) {
-        return Collections.emptyList();
+        return List.of();
       } else {
-        return Collections.singletonList(nonNestedResult);
+        return List.of(nonNestedResult);
       }
     }
     if (nestedResultsListSize == 1) {
@@ -623,9 +658,7 @@ public class JsonUtils {
       @Nullable Map<String, FieldSpec.FieldType> fieldTypeMap, @Nullable TimeUnit timeUnit, List<String> fieldsToUnnest,
       String delimiter, ComplexTypeConfig.CollectionNotUnnestedToJson collectionNotUnnestedToJson) {
     Schema pinotSchema = new Schema();
-    Iterator<Map.Entry<String, JsonNode>> fieldIterator = jsonNode.fields();
-    while (fieldIterator.hasNext()) {
-      Map.Entry<String, JsonNode> fieldEntry = fieldIterator.next();
+    for (Map.Entry<String, JsonNode> fieldEntry : jsonNode.properties()) {
       JsonNode childNode = fieldEntry.getValue();
       inferPinotSchemaFromJsonNode(childNode, pinotSchema, fieldEntry.getKey(), fieldTypeMap, timeUnit, fieldsToUnnest,
           delimiter, collectionNotUnnestedToJson);
@@ -661,9 +694,7 @@ public class JsonUtils {
       }
       // do not include the node for other cases
     } else if (jsonNode.isObject()) {
-      Iterator<Map.Entry<String, JsonNode>> fieldIterator = jsonNode.fields();
-      while (fieldIterator.hasNext()) {
-        Map.Entry<String, JsonNode> fieldEntry = fieldIterator.next();
+      for (Map.Entry<String, JsonNode> fieldEntry : jsonNode.properties()) {
         JsonNode childNode = fieldEntry.getValue();
         inferPinotSchemaFromJsonNode(childNode, pinotSchema, String.join(delimiter, path, fieldEntry.getKey()),
             fieldTypeMap, timeUnit, fieldsToUnnest, delimiter, collectionNotUnnestedToJson);
@@ -687,9 +718,7 @@ public class JsonUtils {
     }
   }
 
-  /**
-   * Returns the data type stored in Pinot that is associated with the given Avro type.
-   */
+  /// Returns the data type stored in Pinot that is associated with the given Avro type.
   public static DataType valueOf(JsonNode jsonNode) {
     if (jsonNode.isInt()) {
       return DataType.INT;
@@ -729,9 +758,7 @@ public class JsonUtils {
         case DATE_TIME:
           Preconditions.checkState(isSingleValueField, "Time field: %s cannot be multi-valued", name);
           Preconditions.checkNotNull(timeUnit, "Time unit cannot be null");
-          // TODO: Switch to new format after releasing 0.11.0
-          //       "EPOCH|" + timeUnit.name()
-          String format = "1:" + timeUnit.name() + ":EPOCH";
+          String format = "EPOCH|" + timeUnit.name();
           String granularity = "1:" + timeUnit.name();
           pinotSchema.addField(new DateTimeFieldSpec(name, dataType, format, granularity));
           break;
@@ -756,13 +783,11 @@ public class JsonUtils {
     }
   }
 
-  /**
-   * Generates the JsonSchemaTreeNode tree from the given json index config indexPaths to represent which path we
-   * should flatten/index in the json record.
-   * @param jsonIndexConfig
-   * @return the root node of the json index paths tree
-   * @throws IllegalArgumentException
-   */
+  /// Generates the JsonSchemaTreeNode tree from the given json index config indexPaths to represent which path we
+  /// should flatten/index in the json record.
+  /// @param jsonIndexConfig
+  /// @return the root node of the json index paths tree
+  /// @throws IllegalArgumentException
   private static JsonSchemaTreeNode createTree(JsonIndexConfig jsonIndexConfig)
       throws IllegalArgumentException {
     Set<String> indexPaths = jsonIndexConfig.getIndexPaths();
@@ -788,28 +813,26 @@ public class JsonUtils {
   }
 }
 
-/**
- * JsonSchemaTreeNode represents the tree node when we construct the json schema tree.
- * This tree is used to represent how we want to flatten/index the json according to the {@link JsonIndexConfig}.
- * The node could be either leaf node or non-leaf node. Both types of node could hold the volume to indicate whether
- * we should flatten/index the json at this node.
- * For example, the config with *.*, a.b.*.*, a.b.x, a.b.c.**, a.b.d.*.*, e.f.g will have the following tree
- * structure:
- * root -- * -- *
- *      -- a -- b -- * -- *
- *                -- c -- **
- *                -- d -- * -- *
- *      -- e -- f -- g
- * The path structure is defined as:
- *  each key is separated by '.'
- *  the key without wildcard represents single value field
- *  the key "*" represents any types of single node
- *  the key "**" represents any types of leaf node OR a subtree with all its children
- * When multiple conditions are matched, e.g. a.b.c, it would match with priority:
- * 1. **
- * 2. exact match (either single value or array value)
- * 3. *
- */
+/// JsonSchemaTreeNode represents the tree node when we construct the json schema tree.
+/// This tree is used to represent how we want to flatten/index the json according to the [JsonIndexConfig].
+/// The node could be either leaf node or non-leaf node. Both types of node could hold the volume to indicate whether
+/// we should flatten/index the json at this node.
+/// For example, the config with \*.\*, a.b.\*.\*, a.b.x, a.b.c.\*\*, a.b.d.\*.\*, e.f.g will have the following tree
+/// structure:
+/// root -- \* -- \*
+///      -- a -- b -- \* -- \*
+///                -- c -- \*\*
+///                -- d -- \* -- \*
+///      -- e -- f -- g
+/// The path structure is defined as:
+///  each key is separated by '.'
+///  the key without wildcard represents single value field
+///  the key "\*" represents any types of single node
+///  the key "\*\*" represents any types of leaf node OR a subtree with all its children
+/// When multiple conditions are matched, e.g. a.b.c, it would match with priority:
+/// 1. \*\*
+/// 2. exact match (either single value or array value)
+/// 3. \*
 class JsonSchemaTreeNode {
   private Map<String, JsonSchemaTreeNode> _children;
   private JsonSchemaTreeNode _gloabalWildcardChild;
@@ -821,12 +844,10 @@ class JsonSchemaTreeNode {
     _children = new HashMap<>();
   }
 
-  /**
-   * If does not have the child node, add a child node to the current node and return the child node.
-   * If the child node already exists, return the existing child node.
-   * @param key
-   * @return child
-   */
+  /// If does not have the child node, add a child node to the current node and return the child node.
+  /// If the child node already exists, return the existing child node.
+  /// @param key
+  /// @return child
   public JsonSchemaTreeNode getAndCreateChild(String key) {
     // if .** is already added, no need to add any child
     if (_gloabalWildcardChild != null) {
