@@ -22,22 +22,28 @@ import com.fasterxml.jackson.databind.JsonNode;
 import java.io.IOException;
 import java.math.BigDecimal;
 import java.sql.Timestamp;
-import java.util.Collections;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
 import java.util.concurrent.TimeUnit;
 import org.apache.pinot.spi.data.TimeGranularitySpec.TimeFormat;
 import org.apache.pinot.spi.utils.BytesUtils;
 import org.apache.pinot.spi.utils.CommonConstants;
 import org.apache.pinot.spi.utils.JsonUtils;
+import org.apache.pinot.spi.utils.UuidUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.testng.Assert;
 import org.testng.annotations.Test;
 import org.testng.collections.Lists;
 
+import static org.assertj.core.api.Assertions.assertThat;
+
 
 @SuppressWarnings("deprecation")
 public class SchemaTest {
   public static final Logger LOGGER = LoggerFactory.getLogger(SchemaTest.class);
+  private static final String UUID_VALUE = "550e8400-e29b-41d4-a716-446655440000";
 
   @Test
   public void testValidation() {
@@ -50,6 +56,10 @@ public class SchemaTest {
 
     schemaToValidate = new Schema();
     schemaToValidate.addField(new DimensionFieldSpec("d", FieldSpec.DataType.STRING, true));
+    schemaToValidate.validate();
+
+    schemaToValidate = new Schema();
+    schemaToValidate.addField(new DimensionFieldSpec("uuid", FieldSpec.DataType.UUID, true));
     schemaToValidate.validate();
 
     schemaToValidate = new Schema();
@@ -94,6 +104,14 @@ public class SchemaTest {
     schemaToValidate = new Schema();
     schemaToValidate.addField(new MetricFieldSpec("m", FieldSpec.DataType.BIG_DECIMAL, BigDecimal.ZERO));
     schemaToValidate.validate();
+  }
+
+  @Test
+  public void testUUIDValidationAllowsMV() {
+    Schema schema = new Schema();
+    schema.addField(new DimensionFieldSpec("uuidMv", FieldSpec.DataType.UUID, false));
+
+    schema.validate();
   }
 
   @Test
@@ -350,6 +368,23 @@ public class SchemaTest {
     Assert.assertEquals(actualSchema.getFieldSpecFor("emptyDefault").getDefaultNullValue(), expectedEmptyDefault);
     Assert.assertEquals(actualSchema.getFieldSpecFor("nonEmptyDefault").getDefaultNullValue(), expectedNonEmptyDefault);
 
+    Assert.assertEquals(actualSchema, expectedSchema);
+    Assert.assertEquals(actualSchema.hashCode(), expectedSchema.hashCode());
+  }
+
+  @Test
+  public void testUUIDType()
+      throws Exception {
+    Schema expectedSchema = new Schema();
+    byte[] expectedDefault = UuidUtils.toBytes(UUID_VALUE);
+
+    expectedSchema.setSchemaName("test");
+    expectedSchema.addField(new DimensionFieldSpec("uuidDefault", FieldSpec.DataType.UUID, true, UUID_VALUE));
+
+    String jsonSchema = expectedSchema.toSingleLineJsonString();
+    Schema actualSchema = Schema.fromString(jsonSchema);
+
+    assertThat((byte[]) actualSchema.getFieldSpecFor("uuidDefault").getDefaultNullValue()).isEqualTo(expectedDefault);
     Assert.assertEquals(actualSchema, expectedSchema);
     Assert.assertEquals(actualSchema.hashCode(), expectedSchema.hashCode());
   }
@@ -691,7 +726,119 @@ public class SchemaTest {
 
     Schema withoutVirtualColumns = schema.withoutVirtualColumns();
 
-    Assert.assertEquals(withoutVirtualColumns.getPrimaryKeyColumns(), Collections.singletonList("metric"),
+    Assert.assertEquals(withoutVirtualColumns.getPrimaryKeyColumns(), List.of("metric"),
         "Unexpected primary key columns");
+  }
+
+  @Test
+  public void testSchemaDescriptionAndTagsSerdeRoundtrip()
+      throws IOException {
+    Schema schema = new Schema.SchemaBuilder()
+        .setSchemaName("events")
+        .setDescription("Tracks all user interaction events.")
+        .setTags(Arrays.asList("real-time", "production"))
+        .addSingleValueDimension("user_id", FieldSpec.DataType.STRING)
+        .addMetric("revenue_cents", FieldSpec.DataType.LONG)
+        .build();
+
+    String jsonString = schema.toSingleLineJsonString();
+    Schema deserialized = Schema.fromString(jsonString);
+
+    assertThat(deserialized.getDescription()).isEqualTo("Tracks all user interaction events.");
+    assertThat(deserialized.getTags()).isEqualTo(Arrays.asList("real-time", "production"));
+    assertThat(deserialized).isEqualTo(schema);
+    assertThat(deserialized.hashCode()).isEqualTo(schema.hashCode());
+  }
+
+  @Test
+  public void testSchemaDescriptionOmittedWhenNotSet()
+      throws IOException {
+    Schema schema = new Schema.SchemaBuilder()
+        .setSchemaName("test")
+        .addSingleValueDimension("col1", FieldSpec.DataType.INT)
+        .build();
+
+    String jsonString = schema.toSingleLineJsonString();
+    assertThat(jsonString).as("description should be absent").doesNotContain("\"description\"");
+    assertThat(jsonString).as("tags should be absent").doesNotContain("\"tags\"");
+
+    // Roundtrip produces identical JSON
+    Schema deserialized = Schema.fromString(jsonString);
+    assertThat(deserialized.toSingleLineJsonString()).isEqualTo(jsonString);
+  }
+
+  @Test
+  public void testSchemaEqualsIncludesDescription() {
+    Schema schema1 = new Schema.SchemaBuilder()
+        .setSchemaName("test")
+        .addSingleValueDimension("col1", FieldSpec.DataType.INT)
+        .build();
+
+    Schema schema2 = new Schema.SchemaBuilder()
+        .setSchemaName("test")
+        .setDescription("A description")
+        .addSingleValueDimension("col1", FieldSpec.DataType.INT)
+        .build();
+
+    // Schemas with different descriptions are NOT equal
+    assertThat(schema1).isNotEqualTo(schema2);
+    assertThat(schema1.hashCode()).isNotEqualTo(schema2.hashCode());
+  }
+
+  @Test
+  public void testSchemaBackwardCompatibilityIgnoresDescription() {
+    Schema oldSchema = new Schema.SchemaBuilder()
+        .setSchemaName("test")
+        .addSingleValueDimension("col1", FieldSpec.DataType.INT)
+        .build();
+
+    Schema newSchema = new Schema.SchemaBuilder()
+        .setSchemaName("test")
+        .setDescription("Added description")
+        .setTags(Arrays.asList("production"))
+        .addSingleValueDimension("col1", FieldSpec.DataType.INT)
+        .build();
+
+    // Description changes don't break backward compatibility
+    assertThat(newSchema.isBackwardCompatibleWith(oldSchema)).isTrue();
+  }
+
+  @Test
+  public void testOldJsonWithoutDescriptionDeserializesCleanly()
+      throws IOException {
+    String oldJson = "{\"schemaName\":\"test\",\"enableColumnBasedNullHandling\":false,"
+        + "\"dimensionFieldSpecs\":[{\"name\":\"col1\",\"dataType\":\"INT\"}]}";
+    Schema schema = Schema.fromString(oldJson);
+    assertThat(schema.getDescription()).isNull();
+    assertThat(schema.getTags()).isNull();
+  }
+
+  @Test
+  public void testWithoutVirtualColumnsCopiesDescription() {
+    Schema schema = new Schema.SchemaBuilder()
+        .setSchemaName("testSchema")
+        .setDescription("my description")
+        .setTags(List.of("tag1"))
+        .addMetricField("metric", FieldSpec.DataType.INT)
+        .build();
+
+    Schema withoutVirtual = schema.withoutVirtualColumns();
+    assertThat(withoutVirtual.getDescription()).isEqualTo("my description");
+    assertThat(withoutVirtual.getTags()).isEqualTo(List.of("tag1"));
+  }
+
+  @Test
+  public void schemaBuilderAddOpenStruct() {
+    Schema schema = new Schema.SchemaBuilder()
+        .setSchemaName("test")
+        .addOpenStruct("attrs",
+            Map.of("count", new DimensionFieldSpec("count", FieldSpec.DataType.INT, true)))
+        .build();
+
+    FieldSpec fs = schema.getFieldSpecFor("attrs");
+    Assert.assertNotNull(fs);
+    Assert.assertEquals(fs.getDataType(), FieldSpec.DataType.OPEN_STRUCT);
+    ComplexFieldSpec cfs = (ComplexFieldSpec) fs;
+    Assert.assertEquals(cfs.getChildFieldSpec("count").getDataType(), FieldSpec.DataType.INT);
   }
 }
