@@ -18,9 +18,8 @@
  */
 package org.apache.pinot.tsdb.spi.plan;
 
-import com.google.common.collect.ImmutableMap;
 import java.time.Duration;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
 import org.apache.pinot.tsdb.spi.AggInfo;
@@ -36,7 +35,7 @@ public class LeafTimeSeriesPlanNodeTest {
   private static final String TIME_COLUMN = "orderTime";
   private static final TimeUnit TIME_UNIT = TimeUnit.SECONDS;
   private static final int SERIES_LIMIT = 10;
-  private static final Map<String, String> QUERY_OPTIONS = ImmutableMap.of("numGroupsLimit", "100000");
+  private static final Map<String, String> QUERY_OPTIONS = Map.of("numGroupsLimit", "100000");
 
   @Test
   public void testGetEffectiveFilter() {
@@ -47,24 +46,24 @@ public class LeafTimeSeriesPlanNodeTest {
     // Case-1: No offset, and empty filter.
     {
       LeafTimeSeriesPlanNode planNode =
-          new LeafTimeSeriesPlanNode(ID, Collections.emptyList(), TABLE, TIME_COLUMN, TIME_UNIT, 0L, "", "value_col",
-              new AggInfo("SUM", false, null), Collections.singletonList("cityName"), SERIES_LIMIT, QUERY_OPTIONS);
+          new LeafTimeSeriesPlanNode(ID, List.of(), TABLE, TIME_COLUMN, TIME_UNIT, 0L, "", "value_col",
+              new AggInfo("SUM", false, null), List.of("cityName"), SERIES_LIMIT, QUERY_OPTIONS);
       assertEquals(planNode.getEffectiveFilter(timeBuckets),
           "orderTime > " + expectedStartTimeInFilter + " AND orderTime <= " + expectedEndTimeInFilter);
     }
     // Case-2: Offset, but empty filter
     {
       LeafTimeSeriesPlanNode planNode =
-          new LeafTimeSeriesPlanNode(ID, Collections.emptyList(), TABLE, TIME_COLUMN, TIME_UNIT, 123L, "", "value_col",
-              new AggInfo("SUM", false, null), Collections.singletonList("cityName"), SERIES_LIMIT, QUERY_OPTIONS);
+          new LeafTimeSeriesPlanNode(ID, List.of(), TABLE, TIME_COLUMN, TIME_UNIT, 123L, "", "value_col",
+              new AggInfo("SUM", false, null), List.of("cityName"), SERIES_LIMIT, QUERY_OPTIONS);
       assertEquals(planNode.getEffectiveFilter(timeBuckets),
           "orderTime > " + (expectedStartTimeInFilter - 123) + " AND orderTime <= " + (expectedEndTimeInFilter - 123));
     }
     // Case-3: Offset and non-empty filter
     {
       LeafTimeSeriesPlanNode planNode =
-          new LeafTimeSeriesPlanNode(ID, Collections.emptyList(), TABLE, TIME_COLUMN, TIME_UNIT, 123L, nonEmptyFilter,
-              "value_col", new AggInfo("SUM", false, Collections.emptyMap()), Collections.singletonList("cityName"),
+          new LeafTimeSeriesPlanNode(ID, List.of(), TABLE, TIME_COLUMN, TIME_UNIT, 123L, nonEmptyFilter,
+              "value_col", new AggInfo("SUM", false, Map.of()), List.of("cityName"),
               SERIES_LIMIT, QUERY_OPTIONS);
       assertEquals(planNode.getEffectiveFilter(timeBuckets),
           String.format("(%s) AND (orderTime > %s AND orderTime <= %s)", nonEmptyFilter,
@@ -73,9 +72,9 @@ public class LeafTimeSeriesPlanNodeTest {
     // Case-4: Offset, and non-empty filter, and time-unit that is not seconds
     {
       LeafTimeSeriesPlanNode planNode =
-          new LeafTimeSeriesPlanNode(ID, Collections.emptyList(), TABLE, TIME_COLUMN, TimeUnit.MILLISECONDS, 123L,
-              nonEmptyFilter, "value_col", new AggInfo("SUM", false, Collections.emptyMap()),
-              Collections.singletonList("cityName"), SERIES_LIMIT, QUERY_OPTIONS);
+          new LeafTimeSeriesPlanNode(ID, List.of(), TABLE, TIME_COLUMN, TimeUnit.MILLISECONDS, 123L,
+              nonEmptyFilter, "value_col", new AggInfo("SUM", false, Map.of()),
+              List.of("cityName"), SERIES_LIMIT, QUERY_OPTIONS);
       assertEquals(planNode.getEffectiveFilter(timeBuckets),
           String.format("(%s) AND (orderTime > %s AND orderTime <= %s)", nonEmptyFilter,
               (expectedStartTimeInFilter * 1000 - 123 * 1000), (expectedEndTimeInFilter * 1000 - 123 * 1000)));
